--- a/assests/css/styles1.css
+++ b/assests/css/styles1.css
@@ -499,3 +499,56 @@ th:last-child{
 #register-form #login-url{
     color: #fb774b;
 }
+
+/* ACCOUNT */
+
+#account-form{
+    width: 50%;
+    margin: 35px auto;
+    text-align: center;
+    padding: 20px;
+}
+
+#account-form input{
+    margin: 5px auto;
+
+}
+
+#account-form #change-pass-btn{
+    color: #fff;
+    background-color: #fb774b;
+}
+
+.account-info #orders-btn, #logout-btn{
+    color:  #fb774b;
+    text-decoration: none;
+}
+
+/* ORDERS */
+.orders table{
+    width: 100%;
+    border-collapse: collapse;
+
+}
+
+.orders .prodct-info{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.orders th{
+    text-align: left;
+    padding: 5px 10px;
+    color: #fff;
+    background-color: #fb774b;
+}
+
+.orders td{
+    padding: 10px 20px;
+}
+
+.orders td img{
+    width: 80px;
+    height: 80px;
+    margin-right:10px ;
+}
