--- a/assests/css/styles.css
+++ b/assests/css/styles.css
@@ -402,12 +402,18 @@ footer .copyright img{
     color: #fb774b;
     text-decoration: none;
     font-size: 15px;
+    background-color: #fff;
+    border: none;
+    width: 100%;
 }
 
 .cart .edit-btn{
     color: #fb774b;
     text-decoration: none;
     font-size: 14px;
+    background-color: #fff;
+    border: none;
+   
 
 }
 
